sandboxBranch: JMSDiconHandler追加。applicationTypeの子要素enable categoryを、disable categoryに変更し、baseとdisable facetを追加。その他facet構成変更。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@836 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.properties
+++ b/org.seasar.dolteng.projects/plugin.properties
@@ -28,5 +28,7 @@ facetDesc.KuinaTopLink=JPA (Java Persistence API) framework.
 facetDesc.Sysdeo=Sysdeo Tomucat Plugin
 facetDesc.WTP=WTP
 
+facetDesc.S2JMSi=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
 facetDesc.S2JMSo=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
-facetDesc.S2JMSio=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
+
+facetDesc.S2RMIc=...
