sandboxBranch: DiconHandlerで、priorityが無い時に追加に失敗していた。チェックボックスが機能していなかった。その他微調整。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@838 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -574,7 +574,7 @@
       </handler>
     </facet>
     <facet id="s2jmsOut" name="S2JMS (Outbound)"
-        extends="s2jmsOut"
+        extends="s2jms"
         root="template/s2jms/outbound"
         displayOrder="_01"
         description="%facetDesc.S2JMSo"
