--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -139,6 +139,7 @@
         <entry kind="file" path="${libPath}/s2-extension-2.4.20.jar" />
         <entry kind="file" path="${libPath}/s2-framework-2.4.20.jar" />
         <entry kind="file" path="${libPath}/geronimo-jta_1.1_spec-1.0.jar" />
+        <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
       </handler>
       <handler type="jdt">
         <entry kind="file" path=".settings/jdt.pref" />
@@ -146,7 +147,6 @@
       <handler type="dolteng">
         <entry kind="file" path=".settings/dolteng.pref" />
       </handler>
-      <handler type="diigu" />
       <handler type="dblauncher">
         <entry kind="file" path=".settings/dblauncher.pref" />
       </handler>
@@ -166,6 +166,13 @@
           <entry kind="file" path="${libPath}/s2-tiger-2.4.20.jar" />
         </handler>
       </if>
+    </facet>
+    <facet id="standalone" name="Standalone"
+        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
+      <if jre="1.5,1.6" />
+      <property name="libPath" value="lib" />
+      <property name="libSrcPath" value="lib/sources" />
+      <property name="mainOutPath" value="target/classes" />
     </facet>
 
 <!-- ==== Web Container Instance Management ==== -->
@@ -239,7 +246,6 @@
         <entry kind="file" path="${libPath}/xmlParserAPIs-2.6.2.jar" />
         <entry kind="file" path="${testLibPath}/xmlunit-1.0.jar" />
         <entry kind="file" path="${testLibPath}/geronimo-jsp_2.0_spec-1.0.jar" />
-        <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
       </handler>
       <handler type="dolteng">
         <entry kind="file" path=".settings/dolteng.teeda.pref" />
@@ -361,7 +367,6 @@
       <handler type="classpath">
         <entry kind="file" path="${libPath}/s2-flex2-1.0.2.jar" />
         <entry kind="file" path="${libPath}/geronimo-jsp_2.0_spec-1.0.jar" />
-        <entry kind="file" path="${libPath}/geronimo-servlet_2.4_spec-1.0.jar" />
       </handler>
       <handler type="dolteng">
         <entry kind="file" path=".settings/dolteng.s2flex2.pref" />
@@ -403,7 +408,6 @@
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <handler type="classpath">
         <entry kind="file" path="${libPath}/s2-dao-1.0.47.jar" />
-        <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
       </handler>
       <handler type="dolteng">
         <entry kind="file" path=".settings/dolteng.s2dao.pref" />
@@ -461,9 +465,9 @@
         <entry kind="file" path="${libPath}/geronimo-interceptor_3.0_spec-1.0.jar" />
         <entry kind="file" path="${libPath}/geronimo-jpa_3.0_spec-1.0.jar" />
         <entry kind="file" path="${libPath}/kuina-dao-1.0.1.jar" />
-        <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
         <entry kind="file" path="${testLibPath}/junit-4.3.1.jar" />
       </handler>
+      <handler type="diigu" />
       <handler type="dolteng">
         <entry kind="file" path=".settings/dolteng.kuina.pref" />
       </handler>
@@ -535,9 +539,8 @@
         root="template/s2jms"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <handler type="default">
-        <entry kind="file" path="${mainResourcePath}/jms-ra.dicon" />
-        <entry kind="file" path="ra/activemq-rar-4.1.1.rar" />
-        <entry kind="file" path="${webAppRoot}/WEB-INF/ra/activemq-rar-4.1.1.rar" />
+        <entry kind="file" path="${mainResourcePath}/app_aop.dicon" />
+        <entry kind="file" path="${libPath}/../ra/activemq-rar-4.1.1.rar" />
       </handler>
       <handler type="classpath">
         <entry kind="file" path="${libPath}/geronimo-annotation_1.0_spec-1.0.jar" />
@@ -566,32 +569,14 @@
         root="template/s2jms/inbound"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <if jre="1.5,1.6" />
-      <handler type="default">
-        <entry kind="file" path="${mainResourcePath}/jms-outbound.dicon" />
-      </handler>
-      <handler type="jmsDicon">
-        <include path="jms-inbound.dicon" />
-      </handler>
-    </facet>
-    <facet id="s2jmsOut" name="S2JMS (Outbound)"
-        extends="s2jms"
-        root="template/s2jms/outbound"
-        displayOrder="_01"
-        description="%facetDesc.S2JMSo"
-        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
-      <if jre="1.5,1.6" />
       <property name="libPath" value="lib" />
       <property name="libSrcPath" value="lib/sources" />
       <property name="mainOutPath" value="target/classes" />
       <handler type="default">
-        <entry kind="file" path="${mainResourcePath}/app_aop.dicon" />
         <entry kind="file" path="${mainResourcePath}/jms-inbound.dicon" />
         <entry kind="file" path="${testJavaPath}/${packagePath}/Main.java" />
         <entry path="${mainJavaPath}/${packagePath}/listener" />
         <entry path="${testJavaPath}/${packagePath}/listener" />
-      </handler>
-      <handler type="defaultCounteract">
-        <entry kind="file" path="${webAppRoot}/WEB-INF/ra/activemq-rar-4.1.1.rar" />
       </handler>
       <handler type="classpath">
         <entry kind="file" path="${libPath}/s2jms-container-1.0.0.jar" />
@@ -605,6 +590,29 @@
           <addCustomizer name="traceCustomizer" />
           <addCustomizer name="s2DxoCustomizer" />
         </component>
+      </handler>
+      <handler type="jmsDicon">
+        <include path="jms-inbound.dicon" />
+      </handler>
+    </facet>
+    <facet id="s2jmsInLast" name="S2JMS (Inbound Last)"
+        root="template/s2jms/inbound"
+        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
+      <if jre="1.5,1.6" />
+      <handler type="default">
+        <entry kind="file" path="${mainResourcePath}/jms-ra.dicon" />
+      </handler>
+    </facet>
+    <facet id="s2jmsOut" name="S2JMS (Outbound)"
+        extends="s2jms"
+        root="template/s2jms/outbound"
+        displayOrder="_01"
+        description="%facetDesc.S2JMSo"
+        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
+      <if jre="1.5,1.6" />
+      <handler type="default">
+        <entry kind="file" path="${mainResourcePath}/jms-outbound.dicon" />
+        <entry kind="file" path="${mainResourcePath}/jms-ra.dicon" />
       </handler>
       <handler type="jmsDicon">
         <include path="jms-outbound.dicon" />
@@ -673,8 +681,9 @@
     </applicationtype>
     <applicationtype
         id="org.seasar.app.jms"
-        name="S2JMS-Server Application">
+        name="S2JMS-Inbound Application">
       <base facet="s2jmsIn"/>
+      <last facet="s2jmsInLast"/>
       <disable category="org.seasar.category.presentation"/>
       <disable category="org.seasar.category.servermanagement"/>
     </applicationtype>
@@ -688,6 +697,7 @@
     <applicationtype
         id="org.seasar.app.standalone"
         name="Standalone Application">
+      <base facet="standalone"/>
       <disable category="org.seasar.category.presentation"/>
       <disable category="org.seasar.category.servermanagement"/>
     </applicationtype>
