sandboxBranch: defaultタグで、applicationTypeを変更した時デフォルトで選択されるファセット群を設定できるようにした。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@843 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -676,12 +676,13 @@
 
     <applicationtype
         id="org.seasar.app.web"
-        name="Web Applivation">
-      <disable facet="s2jmsIn"/>
+        name="Web Application">
+      <default facet="teedaPage,s2dao,sysdeo"/>
     </applicationtype>
     <applicationtype
         id="org.seasar.app.jms"
         name="S2JMS-Inbound Application">
+      <default facet="s2jmsOut"/>
       <first facet="s2jmsIn"/>
       <last facet="s2jmsInLast"/>
       <disable category="org.seasar.category.presentation"/>
