--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -128,8 +128,8 @@
         <entry kind="file" path="${libPath}/ognl-2.6.9-patch-20070908.jar" />
         <entry kind="file" path="${libPath}/poi-3.0-FINAL.jar" />
         <entry kind="file" path="${libPath}/h2-2007-12-27.jar" />
-        <entry kind="file" path="${libPath}/s2-extension-2.4.20.jar" />
-        <entry kind="file" path="${libPath}/s2-framework-2.4.20.jar" />
+        <entry kind="file" path="${libPath}/s2-extension-2.4.22.jar" />
+        <entry kind="file" path="${libPath}/s2-framework-2.4.22.jar" />
         <entry kind="file" path="${libPath}/geronimo-jta_1.1_spec-1.0.jar" />
       </handler>
       <handler type="jdt">
@@ -164,9 +164,9 @@
       </handler>
       <handler type="classpath">
         <entry output="${testOutPath}" path="${webAppRoot}/view" />
-        <entry kind="file" path="${libPath}/teeda-ajax-1.0.11-SP3.jar" />
-        <entry kind="file" path="${libPath}/teeda-core-1.0.11-SP3.jar" />
-        <entry kind="file" path="${libPath}/teeda-extension-1.0.11-SP3.jar" />
+        <entry kind="file" path="${libPath}/teeda-ajax-1.0.12.jar" />
+        <entry kind="file" path="${libPath}/teeda-core-1.0.12.jar" />
+        <entry kind="file" path="${libPath}/teeda-extension-1.0.12.jar" />
         <entry kind="file" path="${libPath}/commons-collections-3.1.jar" />
         <entry kind="file" path="${libPath}/commons-el-1.0.jar" />
         <entry kind="file" path="${libPath}/commons-fileupload-1.0.jar" />
@@ -197,7 +197,7 @@
     <project id="500" name="Base" jre="1.5" root="template/500" extends="0"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <handler type="classpath">
-        <entry kind="file" path="${libPath}/s2-tiger-2.4.20.jar" />
+        <entry kind="file" path="${libPath}/s2-tiger-2.4.22.jar" />
       </handler>
     </project>
     <project id="501" name="WTP Base" jre="1.5"
@@ -223,7 +223,7 @@
         extends="10,500" displayOrder="TO01"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <handler type="classpath">
-        <entry kind="file" path="${libPath}/teeda-tiger-1.0.11-SP3.jar" />
+        <entry kind="file" path="${libPath}/teeda-tiger-1.0.12.jar" />
       </handler>
     </project>
     <project id="511" name="S2Dao Only" jre="1.5" extends="11,500"
@@ -366,8 +366,8 @@
         <entry kind="file" path="WEB-INF/lib/ognl-2.6.9-patch-20070908.jar" />
         <entry kind="file" path="WEB-INF/lib/poi-3.0-FINAL.jar" />
         <entry kind="file" path="WEB-INF/lib/h2-2007-12-27.jar" />
-        <entry kind="file" path="WEB-INF/lib/s2-extension-2.4.20.jar" />
-        <entry kind="file" path="WEB-INF/lib/s2-framework-2.4.20.jar" />
+        <entry kind="file" path="WEB-INF/lib/s2-extension-2.4.22.jar" />
+        <entry kind="file" path="WEB-INF/lib/s2-framework-2.4.22.jar" />
         <entry kind="file" path="WEB-INF/lib/geronimo-jta_1.1_spec-1.0.jar" />
       </handler>
       <handler type="jdt">
@@ -420,7 +420,7 @@
         root="template/550" extends="50" displayOrder="TC20"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
       <handler type="classpath">
-        <entry kind="file" path="WEB-INF/lib/s2-tiger-2.4.20.jar" />
+        <entry kind="file" path="WEB-INF/lib/s2-tiger-2.4.22.jar" />
         <entry kind="file" path="WEB-INF/lib/s2-dao-tiger-1.0.47.jar" />
         <entry kind="file" path="WEB-INF/lib/geronimo-ejb_3.0_spec-1.0.jar" />
         <entry kind="file" path="WEB-INF/lib/s2-flex2-tiger-1.0.0.jar" />
