sandboxBranch: diconファイルのモデルをリファクタリング。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@852 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -383,7 +383,7 @@
           <addCustomizer name="&lt;component class=&quot;org.seasar.struts.customizer.ActionCustomizer&quot;/&gt;" />
         </component>
         <component name="serviceCustomizer">
-          <addAspectCustomizer arg="aop.traceInterceptor" />
+          <addAspectCustomizer arg="&quot;aop.traceInterceptor&quot;" />
           <addCustomizer name="&lt;component class=&quot;org.seasar.framework.container.customizer.TxAttributeCustomizer&quot;/&gt;" />
         </component>
       </handler>
