sandboxBranch: ウィザードのUIを調整。小ぎれいになったと思う。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@876 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -1,5 +1,6 @@
 
 PLUGIN_IMAGE=images/sample.gif
+SEASAR=images/seasar.gif
 CONNECTION_WIZARD=images/connection_wizard.gif
 CONNECTION=images/connectionFolder.gif
 SCHEMA=images/schema.gif
