--- a/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -78,9 +78,13 @@ JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=&Refresh...
 LOAD_FROM_PROJECT=Load From Project...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
-WIZARD_PAGE_CHURA_BASIC_TAB=Basic Settings
-WIZARD_PAGE_CHURA_DETAIL_TAB=Detail Settings
-WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
+WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
+WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Def&ault JRE (Currently ''{0}'')
+WIZARD_PAGE_CHURA_BASIC_SETTINGS=Basic Settings
+WIZARD_PAGE_CHURA_TYPE_SELECTION=&Application Type :
+WIZARD_PAGE_CHURA_ROOT_PACKAGE=&Root Package Name :
+WIZARD_PAGE_CHURA_WORKING_SET=Working sets
+WIZARD_PAGE_CHURA_PROJECT_LAYOUT=Project Layout
 WIZARD_PAGE_CHURA_LIB_PATH=Library Path :
 WIZARD_PAGE_CHURA_LIB_SRC_PATH=Library Source Path :
 WIZARD_PAGE_CHURA_TEST_LIB_PATH=Test Library Path :
@@ -92,10 +96,6 @@ WIZARD_PAGE_CHURA_WEBAPP_ROOT=Webapp Root :
 WIZARD_PAGE_CHURA_TEST_JAVA_PATH=Test Java Source Path :
 WIZARD_PAGE_CHURA_TEST_RESOURCE_PATH=Test Java Resource Path :
 WIZARD_PAGE_CHURA_TEST_OUT_PATH=Test Java Output Path:
-WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
-WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Default JRE ({0})
-WIZARD_PAGE_CHURA_TYPE_SELECTION=Application Type :
-WIZARD_PAGE_CHURA_TYPE_DESCRIPTION=Description :
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
 WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
