"DoltengProjectPreference" から "DoltengPreference" に名称を戻した。共通プリファレンスページ作成。mvnbeans (license: ASL2.0)を組み込み、MavenResourceLoaderを実装。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@885 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -4,6 +4,17 @@
    <extension-point id="scaffold" name="scaffold" schema="schema/scaffold.exsd"/>
    <extension-point id="projectType" name="projectType" schema="schema/projectType.exsd"/>
    <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer class="org.seasar.dolteng.eclipse.preferences.DoltengCommonPreferenceInitializer"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+         class="org.seasar.dolteng.eclipse.preferences.DoltengCommonPreferencePage"
+         id="org.seasar.dolteng.eclipse.preference.page"
+         name="Dolteng"/>
+   </extension>
+   <extension
          point="org.eclipse.ui.propertyPages">
       <page
             adaptable="true"
