--- a/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -23,6 +23,16 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.22.jar" sourcepath="template/jars/sources/s2-framework-2.4.22-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/s2-tiger-2.4.22.jar" sourcepath="template/jars/sources/s2-tiger-2.4.22-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/h2-2007-12-27.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-2.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-vfs-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jaxen-1.0-FCS.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/mvnbeans-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/saxpath-1.0-FCS.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="template/jars/commons-collections-3.1.jar" sourcepath="template/jars/sources/commons-collections-3.1-sources.jar"/>
