--- a/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -4,7 +4,17 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                icons/,\
-               template/
+               template/,\
+               lib/commons-cli-1.0.jar,\
+               lib/commons-httpclient-2.0.2.jar,\
+               lib/commons-io-1.3.1.jar,\
+               lib/commons-lang-1.0.jar,\
+               lib/commons-logging-1.0.4.jar,\
+               lib/commons-vfs-1.0.jar,\
+               lib/jaxen-1.0-FCS.jar,\
+               lib/jdom-1.0.jar,\
+               lib/mvnbeans-1.0-SNAPSHOT.jar,\
+               lib/saxpath-1.0-FCS.jar
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
