sandboxBranch: dependenciesからdependencies2に名称変更
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@888 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects.dependencies/.project
+++ b/org.seasar.dolteng.projects.dependencies/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.seasar.dolteng.projects.dependencies</name>
+	<name>org.seasar.dolteng.projects.dependencies2</name>
 	<comment></comment>
 	<projects>
 	</projects>
