sandboxBranch: customizerDiconHandlerのcomponentタグの下に、addPropertyが書けるようになった。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@897 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -763,7 +763,7 @@
       <handler type="customizerDicon">
         <include path="s2rmi-customizer.dicon"/>
         <component name="connectorCustomizer" class="org.seasar.remoting.rmi.customizer.RMIConnectorCustomizer">
-          <property name="baseURLAsString">"rmi://localhost:1108/"</property>
+          <addProperty name="baseURLAsString" value="&quot;rmi://localhost:1108/&quot;" />
         </component>
         <component name="serviceCustomizer">
           <addCustomizer name="traceCustomizer"/>
